--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
   color: lightslategray;
   display: flex;
   justify-content: center;
-  text-shadow: 1px 1px 0px grey;
+  text-shadow: 1px 1px 0px greygit;
 }
